--- a/iRockPaperScissors/Base.lproj/Main.storyboard
+++ b/iRockPaperScissors/Base.lproj/Main.storyboard
@@ -45,6 +45,9 @@
                                     <segment title="Scissors"/>
                                 </segments>
                                 <color key="tintColor" red="0.0" green="0.19215686269999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="pickerButtons:" destination="BYZ-38-t0r" eventType="valueChanged" id="cOH-yQ-zYD"/>
+                                </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome to Rock Paper Scissors!" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1L6-Jx-g5s">
                                 <frame key="frameInset" minX="16" minY="28" width="343" height="102"/>
@@ -53,10 +56,10 @@
                                 <color key="textColor" red="0.0" green="0.19215686269999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Your play" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccV-ZM-ffH">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Your play" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccV-ZM-ffH">
                                 <frame key="frameInset" minX="16" minY="323" width="80" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -86,6 +89,8 @@
                     </view>
                     <connections>
                         <outlet property="darkMode" destination="cVi-eV-IaY" id="3tu-ve-e65"/>
+                        <outlet property="pickerButton" destination="96m-Kq-v3v" id="Isf-im-NXM"/>
+                        <outlet property="playmoji" destination="ccV-ZM-ffH" id="P0x-EI-St5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
