--- a/iRockPaperScissors/Base.lproj/Main.storyboard
+++ b/iRockPaperScissors/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                 <rect key="frame" x="0.0" y="269" width="375" height="29"/>
                                 <color key="backgroundColor" red="0.99924671649932861" green="0.96444720029830933" blue="0.87554585933685303" alpha="1" colorSpace="calibratedRGB"/>
                                 <segments>
-                                    <segment title="👊"/>
+                                    <segment title="✊"/>
                                     <segment title="✋"/>
                                     <segment title="✌️"/>
                                 </segments>
